Fix item alignment

--- a/styles.css
+++ b/styles.css
@@ -13,9 +13,8 @@ h1 {
   color: #dd6767;
   text-align: center;
   font-size: calc(20px + 3vh);
-  line-height: 4vh; 
+  line-height: 6vh; 
   background-color: #941717;
-  margin-right: -1.25vw;
   height: 5vh;
 }
 
@@ -32,6 +31,7 @@ label {
   margin-left: 1vw;
   display: flex;
   align-self: center;
+  margin-bottom: 0vw;
 }
 
 .box {
@@ -96,6 +96,7 @@ label {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  justify-items: center;
 }
 
 .btn {
@@ -103,7 +104,6 @@ label {
   background-color: #941717;
   border-color: #941717;
   position: relative;
-  top: 1vh;
   left: 1vw;
   right: 1vw;
   outline: none;
@@ -129,7 +129,8 @@ input[type="text"] {
   border-radius: 1em;
   outline: none;
   height: calc(1.5em + 0.5vh);
-  margin: 0.5vw;
+  margin-left: 0.5vw;
+  margin-right: 0.5vw;
 }
 
 input[type="checkbox"] {
@@ -152,8 +153,7 @@ input[type="checkbox"]:checked:after {
   position: absolute;
   height: 1em;
   width: 1em;
-  line-height: 1;
-  margin: auto;
+  line-height: 1em;
   top: 0;
   bottom: 0;
   left: 0;
